<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Industry Calculator for EVE Online</string>
    <string name="about">
        Industry Calculator for EVE Online version 3.2.9.1 © 2016 EXTER Software.
        All EVE-Online related materials are property of CCP.
    </string>
    <string name="app_github_url" translatable="false">https://github.com/EXTER7/IndustryCalculatorForEVE</string>
    <string name="icon">icon</string>
    <string name="task_options">task options</string>
    <string name="updating_market_prices">Updating market prices</string>
    <string name="filter">Filter:</string>
    <string name="meta_group">Meta Group:</string>
    <string name="clear_category_group">Clear category/group</string>
    <string name="manufacturing">Manufacturing</string>
    <string name="refining">Refining</string>
    <string name="reactions">Reactions</string>
    <string name="planet">Planet</string>
    <string name="add_task">Add Task</string>
    <string name="add_group">Add Group</string>
    <string name="group_scale">Group Scale:</string>
    <string name="sort_by">Sort by:</string>
    <string name="category">Category:</string>
    <string name="slash" translatable="false">/</string>
    <string name="manufacturing_time">Munufacturing time:</string>
    <string name="calculate_invention">Calculate invention</string>
    <string name="invention">Invention:</string>
    <string name="success_chance">Success chance:</string>
    <string name="invention_time">Invention time:</string>
    <string name="relic">Relic:</string>
    <string name="attempts">Attempts:</string>
    <string name="runs_attempt">Runs/attempt:</string>
    <string name="decryptor">Decryptor:</string>
    <string name="blueprint">Blueprint:</string>
    <string name="me_level">ME level %:</string>
    <string name="te_level">TE level %:</string>
    <string name="runs">Runs:</string>
    <string name="copies">Copies:</string>
    <string name="character">Character:</string>
    <string name="char_hardwiring">Slot 8 Hardwiring:</string>
    <string name="installation">Installation:</string>
    <string name="solar_system">Solar System:</string>
    <string name="inst_manufacturing">Manufacturing:</string>
    <string name="inst_invention">Invention:</string>
    <string name="installation_tax">Installation Tax %:</string>
    <string name="fetch_market_prices">Fetch market prices</string>
    <string name="order_type">Order type:</string>
    <string name="sell_orders">Sell Orders</string>
    <string name="buy_orders">Buy Orders</string>
    <string name="broker_fee">Broker Fee %:</string>
    <string name="transaction_tax">Transaction Tax %:</string>
    <string name="manual">Manual</string>
    <string name="price_unit">Price/unit</string>
    <string name="material_market">Market</string>
    <string name="component">component</string>
    <string name="market">market</string>
    <string name="desc_item">item</string>
    <string name="planet_type">Planet Type:</string>
    <string name="planet_item">item</string>
    <string name="planet_set">SET …</string>
    <string name="run_time_days">Run time (days):</string>
    <string name="customs_office_tax">Customs Office Tax %:</string>
    <string name="structures">Structures:</string>
    <string name="add_factory">Add Factory</string>
    <string name="add_extractor">Add Extractor</string>
    <string name="planet_resource">planet resource</string>
    <string name="processor">processor</string>
    <string name="remove">remove</string>
    <string name="starbase">Starbase:</string>
    <string name="control_tower">Control Tower:</string>
    <string name="sovereignty">Sovereignty:</string>
    <string name="add_reactor">Add Reactor</string>
    <string name="add_moon_miner">Add Moon Miner</string>
    <string name="reactors_moon_miners">Reactors / Moon Miners:</string>
    <string name="reprocessing_skill">Reprocessing skill:</string>
    <string name="reprocessing_efficiency_skill">Reprocessing Efficiency skill:</string>
    <string name="refinery">Refinery:</string>
    <string name="station_tax">Station tax %:</string>
    <string name="item">Item:</string>
    <string name="ore_amount">Ore amount (units):</string>
    <string name="settings_title">Settings</string>
    <string name="default_market_produced">Default market for produced items:</string>
    <string name="default_market_required">Default market for required items:</string>
    <string name="default_blueprint_stats">Default T1 blueprint stats:</string>
    <string name="no_profit">No profit</string>
    <string name="eic_activity_profit">Profit: %s ISK</string>
    <string name="eic_activity_loss">Loss: %s ISK</string>
    <string name="materials_sell_orders">Sell orders: %s</string>
    <string name="materials_buy_orders">Buy orders: %s</string>
    <string name="material_isk">%s ISK</string>
    <string name="material_isk_unit">%s ISK/unit</string>
    <string name="material_additional_expense">Additional expense: %s ISK</string>
    <string name="material_m3">%s m3</string>
    <string name="group_parent">Parent group</string>
    <string name="group_new">New group</string>
    <string name="set_group_market">set group market</string>
    <string name="table_mode">Use table UI</string>
    <string name="materials">Materials</string>
</resources>
